# Note

./: build.gradle  config.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xc/note/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: XAudio.cpp  XAudio.h  XConstDefine.h  XFFmpeg.cpp  XFFmpeg.h  XJNICall.cpp  XJNICall.h  XPacketQueue.cpp  XPacketQueue.h  XPlayerStatus.cpp  XPlayerStatus.h  native-lib.cpp
app/src/main/java/com/xc/note/: MainActivity.java
app/src/main/java/com/xc/note/media/: XPlayer.java
app/src/main/java/com/xc/note/media/listener/: MediaErrorListener.java  MediaPreparedListener.java  MediaProgressListener.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/xc/note/: ExampleUnitTest.java
base/: build.gradle
base/src/androidTest/java/com/xc/base/: ExampleInstrumentedTest.java
base/src/main/: AndroidManifest.xml
base/src/test/java/com/xc/base/: ExampleUnitTest.java
dance/: build.gradle
dance/src/main/: AndroidManifest.xml
dance/src/main/module/: AndroidManifest.xml
dance/src/main/res/drawable/: shape_inde_bg.xml
dance/src/main/res/layout/: activity_dance.xml  item_dance.xml  item_item_content.xml  item_item_dance.xml  item_item_image.xml
doc/: README
doc/dance/多线程/: 01-死锁.md  02-Semaphore.md
doc/数据结构与算法/: 递归.md
doc/零散/: 01-SurfaceView.md  02-binder的理解.md
doc/音视频/: 02-集成ffmpeg.md
gradle/wrapper/: gradle-wrapper.properties
review/: build.gradle
review/src/main/: AndroidManifest.xml
(+14 files in other folders)
